--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -1,5 +1,6 @@
-@import "../../src/variables.sample";
-@import "../../src/variables_for_component.sample";
+@import "../../src/sample-setup-variables";
+@import "../../src/sample-variables";
+@import "../../src/sample-component-variables";
 @import "../../src/trunks";
 // @import "~ngx-bootstrap/datepicker/bs-datepicker.css";
 
