--- a/app/src/components/modal.scss
+++ b/app/src/components/modal.scss
@@ -6,6 +6,7 @@ $modal-large-width: 960px !default;
 $modal-full-width: 100% !default;
 $modal-full-height: 100% !default;
 
+// override
 $modal-content-width: $modal-normal-width;
 
 .modal {
