--- a/app/templates/general/helper.html
+++ b/app/templates/general/helper.html
@@ -194,14 +194,14 @@
 }
 
 .has-shadow {
-  box-shadow: $box-shadow;
+  box-shadow: $box-shadow-for-has-shadow;
 }
 
 .has-shadow-hovered {
   transition: .2s ease;
 
   &:hover {
-    box-shadow: $box-shadow-hovered;
+    box-shadow: $box-shadow-for-has-shadow-hovered;
   }
 }
 
