--- a/app/src/element/badge.scss
+++ b/app/src/element/badge.scss
@@ -6,12 +6,12 @@ $badge-font-size: $size-normal !default;
   padding: 0.2em 0.4em;
   font-weight: $weight-bold;
   font-size: $badge-font-size;
-  color: $white;
+  color: $text;
   line-height: 1;
   vertical-align: baseline;
   white-space: nowrap;
   text-align: center;
-  background: $grey;
+  background: $background;
   border-radius: 1em;
 
   @each $name, $pair in $colors {
