--- a/app/src/sample-component-variables.scss
+++ b/app/src/sample-component-variables.scss
@@ -370,7 +370,23 @@ $button-font-weight: $weight-normal;
 
 $navbar-dropdown-item-color: $text;
 
-// $tab-highlight-color: $primary;
+// $tabs-link-background-color: $scheme-main-bis;
+
+// $tabs-has-box-shadow-box: -2px 0px 0px -1px rgba(10, 10, 10, 0.1);
+
+// $tabs-sheet-link-border-color: $border;
+// $tabs-sheet-link-border-style: solid;
+// $tabs-sheet-link-border-width: 1px;
+// $tabs-sheet-link-hover-background-color: $background;
+// $tabs-sheet-link-hover-border-color: $border-hover;
+// $tabs-sheet-link-active-color: $primary;
+// $tabs-sheet-link-active-background-color: $scheme-main;
+// $tabs-sheet-link-active-border-color: $border;
+// $tabs-sheet-link-active-border-bottom-color: transparent;
+
+// $tab-highlight-border-color: $primary;
+// $tab-highlight-border-style: solid;
+// $tab-highlight-border-width: 3px;
 // --
 
 // = forms
