improve navbar, add missing variables, add tile is-mobile

--- a/app/src/base/block-spacing.scss
+++ b/app/src/base/block-spacing.scss
@@ -57,7 +57,7 @@
 .tile {
   &.is-ancestor {
     &:not(:last-child) {
-      margin-bottom: $block-spacing;
+      margin-bottom: $tile-spacing;
     }
   }
   &.is-vertical {
