--- a/app/src/components/navbar.scss
+++ b/app/src/components/navbar.scss
@@ -1,19 +1,41 @@
 $navbar-dropdown-item-color: $text !default;
 
 // .navbar-dropdown behavior for more detailed style
-.navbar {
-  .navbar-item {
-    .navbar-dropdown {
-      a.navbar-item {
-        color: $navbar-dropdown-item-color; // custom var
-    
-        &:hover {
-          background: $navbar-dropdown-item-hover-background-color;
+.navbar-item {
+  .navbar-dropdown {
+    a.navbar-item,
+    .navbar-link {
+      color: $navbar-dropdown-item-color; // custom var
+  
+      &.active {
+        color: $navbar-dropdown-item-active-color;
+      }
+
+      &:hover {
+        background-color: $navbar-dropdown-item-hover-background-color;
+        color: $navbar-dropdown-item-hover-color;
+      }
+    }
+    .navbar-link {
+      &.active::after {
+        border-color: $navbar-dropdown-item-active-color;
+      }
+    }
+  }
+} 
+@include from($navbar-breakpoint) {
+  .navbar-dropdown {
+    .navbar-item.has-dropdown {
+      &:hover {
+        > a.navbar-item,
+        > .navbar-link {
+          background-color: $navbar-dropdown-item-hover-background-color;
           color: $navbar-dropdown-item-hover-color;
         }
-    
-        &.active {
-          color: $navbar-dropdown-item-active-color;
+        .navbar-link {
+          &::after {
+            border-color: $navbar-dropdown-item-hover-color;
+          }
         }
       }
     }
@@ -21,12 +43,23 @@ $navbar-dropdown-item-color: $text !default;
 }
 
 // should has hover background at parent level
-.navbar-item.has-dropdown:hover {
-  background-color: $navbar-item-hover-background-color;
-  .navbar-link {
-    color: $navbar-item-hover-color;  
-    &:after {
-      border-color: $navbar-item-hover-color;
+.navbar-item {
+  &:hover {
+    background-color: $navbar-item-hover-background-color;
+    > .navbar-link {
+      color: $navbar-item-hover-color;
+      &::after {
+        border-color: $navbar-item-hover-color;
+      }
+    }
+  }
+  &.has-dropdown {
+    &:focus,
+    &:hover,
+    &.is-active {
+      .navbar-link {
+        background-color: transparent;
+      }
     }
   }
 }
@@ -36,28 +69,38 @@ $navbar-dropdown-item-color: $text !default;
  * This modification will make .navbar-item.has-dropdown has padding same as any .navbar-item,
  * then remove .navbar-link's padding except its right side, 
  */ 
-.navbar { 
-  .navbar-item {
-    &.has-dropdown {
-      cursor: pointer;
-      padding: 0.5rem 1rem;
-
-      .navbar-link {
-        padding-top: 0;
-        padding-right: 1.5em;
-        padding-bottom: 0;
-        padding-left: 0;
-      }
+// .navbar-item.has-dropdown {
+//   .navbar-link {
+//     &.is-arrowless {
+//       padding-right: 0;
+//     }
+//   }
+// }
+.navbar-item,
+.navbar-link {
+  padding: 0.5rem 1rem;
+}
+.navbar-item {
+  &.has-dropdown {
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    
+    .navbar-link {
+      padding: 0;
     }
 
-    .navbar-link {
-      &::after {
-        right: 0.25em;
-      }
+    .navbar-link:not(.is-arrowless) {
+      padding-right: 1.5em;
+    }
+  }
 
-      &:not(.is-arrowless)::after {
-        margin-top: -0.5em;
-      }
+  .navbar-link {
+    &::after {
+      right: 0.25em;
+    }
+
+    &:not(.is-arrowless)::after {
+      margin-top: -0.5em;
     }
   }
 }
@@ -66,20 +109,18 @@ $navbar-dropdown-item-color: $text !default;
   * Create .navbar-item-content to use as content container same as .navbar-link 
   * but for non-link content
   */
- .navbar { 
-  .navbar-item {
-    &.has-badge {
-      .navbar-item-content { // custom class
-        position: relative;
-        padding-right: 2.5em;
-      }
+.navbar-item {
+  &.has-badge {
+    .navbar-item-content { // custom class
+      position: relative;
+      padding-right: 2.5em;
+    }
 
-      .badge {
-        position: absolute;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%);
-      }
+    .badge {
+      position: absolute;
+      right: 0;
+      top: 50%;
+      transform: translateY(-50%);
     }
   }
 }
@@ -97,7 +138,13 @@ $navbar-dropdown-item-color: $text !default;
     }
   }
 
-  .navbar-dropdown a.navbar-item.is-active:not(:focus):not(:hover) {
-    background-color: $navbar-dropdown-item-active-background-color;
+  .navbar-dropdown {
+    a.navbar-item {
+      padding-right: 1rem;
+
+      .is-active:not(:focus):not(:hover) {
+        background-color: $navbar-dropdown-item-active-background-color;
+      }
+    }
   }
 }
