--- a/app/src/sample-variables.scss
+++ b/app/src/sample-variables.scss
@@ -34,27 +34,28 @@ $radius-rounded: 290486px;
 $speed: 86ms;
 
 // Black and White
-$black:        #0a0a0a;
-$black-bis:    #121212;
-$black-ter:    #242424;
-$grey-darker:  #363636;
-$grey-dark:    #4a4a4a;
-$grey:         #7a7a7a;
-$grey-light:   #b5b5b5;
-$grey-lighter: #dbdbdb;
-$white-ter:    #f5f5f5;
-$white-bis:    #fafafa;
-$white:        #ffffff;
+$black:         #0a0a0a;
+$black-bis:     #121212;
+$black-ter:     #242424;
+$grey-darker:   #363636;
+$grey-dark:     #4a4a4a;
+$grey:          #7a7a7a;
+$grey-light:    #b5b5b5;
+$grey-lighter:  #dbdbdb;
+$grey-lightest: #ededed;
+$white-ter:     #f5f5f5;
+$white-bis:     #fafafa;
+$white:         #ffffff;
 
 // Colors
-$orange:       #ff470f;
-$yellow:       #ffdd57;
-$green:        #23d160;
-$turquoise:    #00d1b2;
-$cyan:         #209cee;
-$blue:         #3273dc;
-$purple:       #b86bff;
-$red:          #ff3860;
+$orange:        #ff470f;
+$yellow:        #ffdd57;
+$green:         #23d160;
+$turquoise:     #00d1b2;
+$cyan:          #209cee;
+$blue:          #3273dc;
+$purple:        #b86bff;
+$red:           #ff3860;
 
 // Meaning Colors
 
@@ -66,17 +67,19 @@ $scheme-invert: $black;
 $scheme-invert-bis: $black-bis;
 $scheme-invert-ter: $black-ter;
 
-$body-background-color: $scheme-main;
-$background: $white-ter;
+$background: $white-ter; // almost white background, most use for hover background, divider, default background, disabled background
 $border: $grey-lighter;
 $border-hover: $grey-lighter;
+$border-light: $grey-lightest;
+$border-light-hover: $grey-light;
 
 // Text colors
 $text: $grey-dark;
 $text-invert: $white;
 $text-light: $grey;
 $text-strong: $grey-darker;
-$text-disabled: $grey-light;
+$text-disabled: $white-bis;
+$text-placeholder: $grey-light;
 
 // Default colors
 $primary: $turquoise;
