--- a/app/src/sample-variables.scss
+++ b/app/src/sample-variables.scss
@@ -1,6 +1,10 @@
 @import './utilities/functions';
 // @import '~trunks-ui/utilities/functions';
 
+// Block Spacing (Adobe XD Square Size)
+$block-spacing: 2rem;
+$block-spacing-mobile: $block-spacing;
+
 // Font size
 $size-small: 1.2rem;
 $size-normal: 1.6rem;
