--- a/app/src/utilities/_all.scss
+++ b/app/src/utilities/_all.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-@import 'setup-variables';
 @import "variables";
+@import 'variables-config';
 @import 'functions';
 @import 'mixins';
