--- a/app/src/utilities/variables.scss
+++ b/app/src/utilities/variables.scss
@@ -1,3 +1,7 @@
+// Block Spacing (Adobe XD Square Size)
+$block-spacing: 2rem !default;
+$block-spacing-mobile: $block-spacing !default;
+
 // Font size
 $size-small: 1.2rem !default;
 $size-normal: 1.6rem !default;
