--- a/app/src/base/helpers.scss
+++ b/app/src/base/helpers.scss
@@ -94,6 +94,7 @@ $box-shadow-for-has-shadow-hovered: 1px 3px 10px 2px rgba($black, 0.1), 0 0 0 1p
 }
 
 .is-justify-evenly, .is-flex.is-justify-evenly {
+  justify-content: space-around; // fix ie
   justify-content: space-evenly;
 }
 
