--- a/app/src/base/helpers.scss
+++ b/app/src/base/helpers.scss
@@ -1,5 +1,6 @@
 $box-shadow-for-has-shadow: 0 2px 3px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default;
 $box-shadow-for-has-shadow-hovered: 1px 3px 10px 2px rgba($black, 0.1), 0 0 0 1px rgba($black, 0.1) !default;
+$link-decoration: underline !default;
 
 // Block Spacing
 @for $i from 2 through 5 {
@@ -22,6 +23,11 @@ $box-shadow-for-has-shadow-hovered: 1px 3px 10px 2px rgba($black, 0.1), 0 0 0 1p
 }
 
 .push-right-auto {
+  margin-right: auto;
+}
+
+.push-auto {
+  margin-left: auto;
   margin-right: auto;
 }
 
@@ -144,22 +150,146 @@ $box-shadow-for-has-shadow-hovered: 1px 3px 10px 2px rgba($black, 0.1), 0 0 0 1p
   vertical-align: text-top;
 }
 
-// Typography
-.has-text-weight-bold, .has-text-weight-semibold, .has-text-weight-medium {
-  color: $text-strong;
+// Background Color
+@each $name, $pair in $colors {
+  $color: nth($pair, 1);
+  .bg-#{$name} {
+    background-color: $color !important;
+  }
+}
+@each $name, $shade in $shades {
+  .bg-#{$name} {
+    background-color: $shade !important;
+  }
 }
 
-.has-text-weight-normal {
+// Typography
+
+// color
+.text {
   color: $text;
 }
 
-.has-text-weight-light {
+.text-invert {
+  color: $text-invert;
+}
+
+.text-strong {
+  color: $text-strong;
+}
+
+.text-light {
   color: $text-light;
 }
 
+.text-lighter {
+  color: $text-lighter;
+}
+
+.text-disabled {
+  color: $text-disabled;
+}
+
+.text-link {
+  cursor: pointer;
+  text-decoration: $link-decoration;
+  strong {
+    color: currentColor;
+  }
+  &:hover {
+    color: $link-hover;
+  }
+}
+
+@each $name, $pair in $colors {
+  $color: nth($pair, 1);
+  .text-#{$name} {
+    color: $color !important;
+  }
+}
+
+// size
 @each $name, $size in $font-sizes {
-  .has-text-#{$name} {
+  .text-#{$name} {
     font-size: $size !important;
+  }
+}
+
+// weight
+.text-weight-light {
+  font-weight: $weight-light !important;
+}
+
+.text-weight-normal {
+  font-weight: $weight-normal !important;
+}
+
+.text-weight-medium {
+  font-weight: $weight-medium !important;
+}
+
+.text-weight-semibold {
+  font-weight: $weight-semibold !important;
+}
+
+.text-weight-bold {
+  font-weight: $weight-bold !important;
+}
+
+// align
+$alignments: ('center': 'center', 'justify': 'justify', 'left': 'left', 'right': 'right');
+
+@each $alignment, $text-align in $alignments {
+  .text-#{$alignment} {
+    text-align: #{$text-align} !important;
+  }
+}
+
+@each $alignment, $text-align in $alignments {
+  @include mobile {
+    .text-#{$alignment}-mobile {
+      text-align: #{$text-align} !important;
+    }
+  }
+  @include tablet {
+    .text-#{$alignment}-tablet {
+      text-align: #{$text-align} !important;
+    }
+  }
+  @include tablet-only {
+    .text-#{$alignment}-tablet-only {
+      text-align: #{$text-align} !important;
+    }
+  }
+  @include touch {
+    .text-#{$alignment}-touch {
+      text-align: #{$text-align} !important;
+    }
+  }
+  @include desktop {
+    .text-#{$alignment}-desktop {
+      text-align: #{$text-align} !important;
+    }
+  }
+  @include desktop-only {
+    .text-#{$alignment}-desktop-only {
+      text-align: #{$text-align} !important;
+    }
+  }
+  @include widescreen {
+    .text-#{$alignment}-widescreen {
+      text-align: #{$text-align} !important;
+    }
+  }
+  @include widescreen-only {
+    .text-#{$alignment}-widescreen-only {
+      text-align: #{$text-align} !important;
+    }
+  }
+  @include fullhd {
+    .text-#{$alignment}-fullhd {
+      text-align: #{$text-align} !important;
+    }
   }
 }
 
