--- a/app/src/element/icon.scss
+++ b/app/src/element/icon.scss
@@ -44,8 +44,12 @@
 }
 
 .button {
-  .icon.icon-em:first-child:not(:last-child) {
-    margin-left: auto;
-    margin-right: 0.5em;
+  .icon,
+  .icon.icon-em {
+    &:first-child:not(:last-child) {
+      margin-left: auto;
+      margin-right: 0.5em;
+    }
   }
 }
+
