--- a/app/templates/component/navbar.html
+++ b/app/templates/component/navbar.html
@@ -57,9 +57,7 @@
           <div class="navbar-brand">
             <a class="navbar-item"
                href="https://bulma.io">
-              <img src="https://bulma.io/images/bulma-logo.png"
-                   width="112"
-                   height="28">
+              <img src="https://bulma.io/images/bulma-logo.png">
             </a>
 
             <a role="button"
@@ -136,9 +134,7 @@
   <div class="navbar-brand">
     <a class="navbar-item"
         href="https://bulma.io">
-      <img src="https://bulma.io/images/bulma-logo.png"
-            width="112"
-            height="28">
+      <img src="https://bulma.io/images/bulma-logo.png">
     </a>
 
     <a role="button"
@@ -221,7 +217,8 @@ document.getElementById('navbarMenu').classList.toggle('is-active');
       <div class="block">
         <p>$navbar-dropdown-item-color: $text;</p>
         <p>$navbar-item-hover-color: $link; <span class="has-text-grey-light">// created by Bulma</span></p>
-        <p>$navbar-item-hover-background-color: $white-bis; <span class="has-text-grey-light">// created by Bulma</span></p>
+        <p>$navbar-item-hover-background-color: $white-bis; <span class="has-text-grey-light">// created by Bulma</span>
+        </p>
         <p>$navbar-dropdown-item-hover-color: $black; <span class="has-text-grey-light">// created by Bulma</span></p>
         <p>$navbar-dropdown-item-hover-background-color: $background; <span class="has-text-grey-light">// created by
             Bulma</span></p>
