--- a/app/src/sample-variables-config.scss
+++ b/app/src/sample-variables-config.scss
@@ -417,8 +417,8 @@ $button-large-padding-horizontal: 4.8rem;
 
 // = components
 // $modal-card-title-font-weight: $weight-bold;
+// // $modal-content-width: 640px;
 // $modal-small-width: 320px;
-// $modal-normal-width: 640px;
 // $modal-medium-width: 780px;
 // $modal-large-width: 960px;
 // $modal-full-width: 100%;
