--- a/app/src/bulma-fix.scss
+++ b/app/src/bulma-fix.scss
@@ -31,6 +31,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  line-height: 1.5;
 }
 
 // Fix: navbar-menu height does not equal navbar
