--- a/app/src/lib/ngx-datatable.scss
+++ b/app/src/lib/ngx-datatable.scss
@@ -1,11 +1,60 @@
+$ngx-datatable-table-shadow: none !default;
+$ngx-datatable-table-border: 1px solid $border !default;
+$ngx-datatable-table-row-border: none !default;
+$ngx-datatable-table-cell-border: 1px solid $border !default;
+
+$ngx-datatable-color: $text !default;
+$ngx-datatable-font-size: $size-normal !default;
+
+$ngx-datatable-row-background-color: $scheme-main !default;
+$ngx-datatable-row-hover-background-color: $scheme-main-ter !default;
+$ngx-datatable-striped-row-even-background-color: $scheme-main-bis !default;
+$ngx-datatable-striped-row-even-hover-background-color: $scheme-main-ter !default;
 $ngx-datatable-row-detail-background-color: $background !default;
 
+$ngx-datatable-table-head-cell-align: center !default;
+$ngx-datatable-table-head-cell-color: $text-invert !default;
+$ngx-datatable-table-head-cell-background-color: $grey !default;
+$ngx-datatable-table-head-cell-font-size: $size-normal !default;
+$ngx-datatable-table-head-cell-font-weight: $weight-bold !default;
+
+$ngx-datatable-header-filter-wrapper-height: $control-height * 1.5 !default;
+$ngx-datatable-header-filter-wrapper-background-color: $scheme-main-bis !default;
+$ngx-datatable-header-filter-height: $control-height !default;
+$ngx-datatable-header-filter-radius: 0 !default;
+$ngx-datatable-header-filter-border-color: $scheme-main-ter !default;
+
+$ngx-datatable-foot-background-color: $scheme-main-bis !default;
+$ngx-datatable-pager-color: $primary-invert !default;
+$ngx-datatable-pager-background-color: $primary !default;
+
+$ngx-datatable-selection-background-color: $grey !default;
+$ngx-datatable-selection-color: $text-invert !default;
+
 .ngx-datatable.material {
+  box-shadow: $ngx-datatable-table-shadow;
+  border: $ngx-datatable-table-border;
+  background-color: $ngx-datatable-row-background-color;
+
+  &:not(.cell-selection) .datatable-body-row:hover,
+  &:not(.cell-selection) .datatable-body-row:hover .datatable-row-group {
+    background-color: $ngx-datatable-row-hover-background-color;
+  }
+
   &.striped {
     .datatable-row-odd {
-      background-color: $table-striped-row-even-background-color;
+      background-color: $ngx-datatable-striped-row-even-background-color;
+    }
+
+    &:not(.cell-selection) .datatable-body-row:hover,
+    &:not(.cell-selection) .datatable-body-row:hover .datatable-row-group {
+      .datatable-row-odd {
+        background-color: $ngx-datatable-striped-row-even-hover-background-color;
+      }
     }
   }
+
+  
 
   // selectable cursor
   .selectable:not(.checkbox-selection) {
@@ -17,6 +66,7 @@ $ngx-datatable-row-detail-background-color: $background !default;
   // better ngx-datatable's sort arrow
   .sortable {
     .sort-btn {
+      color: $ngx-datatable-table-head-cell-color;
       &:after {
         font-family: data-table;
         content: 'c';
@@ -33,24 +83,22 @@ $ngx-datatable-row-detail-background-color: $background !default;
     display: none !important;
   }
 
-  &.has-filter-on-header {
-    .sort-btn {
-      position: absolute;
-      top: 8px;
-      right: 10px;
-    }
-  }
-
   .datatable-header {
     .datatable-header-cell {
+      background-color: $ngx-datatable-table-head-cell-background-color;
       @include bg-color;
       font-weight: bold !important;
       padding: .5em 1em !important;
       height: 100%;
-      border-right: 1px solid $border;
+      border-right: $ngx-datatable-table-cell-border;
+      overflow: hidden;
 
       &:last-child {
         border-right: 0;
+      }
+
+      .datatable-header-cell-template-wrap {
+        text-align: $ngx-datatable-table-head-cell-align;
       }
 
       &.sortable .datatable-header-cell-wrapper {
@@ -59,12 +107,16 @@ $ngx-datatable-row-detail-background-color: $background !default;
 
       .datatable-header-cell-wrapper {
         cursor: auto;
+
+        .datatable-header-cell-label {
+          display: block;
+          color: $ngx-datatable-table-head-cell-color;
+          font-size: $ngx-datatable-table-head-cell-font-size;
+          font-weight: $ngx-datatable-table-head-cell-font-weight;
+        }
       }
       
-      .datatable-header-cell-template-wrap {
-        line-height: 1.5;
-      }
-
+      .datatable-header-cell-template-wrap,
       .sort-btn {
         line-height: 1.5;
       }
@@ -73,15 +125,20 @@ $ngx-datatable-row-detail-background-color: $background !default;
 
   .datatable-body {
     .datatable-body-row {
-      border-top: 1px solid $border;
+      border-top: $ngx-datatable-table-row-border;
 
       .datatable-body-cell {
-        font-size: $size-normal;
+        color: $ngx-datatable-color;
+        font-size: $ngx-datatable-font-size;
         padding: .25em 1em !important;
-        border-right: 1px solid $border;
+        border-right: $ngx-datatable-table-cell-border;
 
         &:last-child {
           border-right: 0;
+        }
+
+        .ic {
+          color: $ngx-datatable-color;
         }
 
         .input-group-inline, .input-inline {
@@ -89,30 +146,100 @@ $ngx-datatable-row-detail-background-color: $background !default;
         }
       }
 
-      @each $name, $pair in $colors {
-        $color: nth($pair, 1);
-        $color-invert: nth($pair, 2);
-        &.is-#{$name} {
-          background: $color;
-          .datatable-body-cell {
-            color: $color-invert;
-          }
-        }
-      }
+      @include bg-color;
     }
 
     .datatable-row-detail {
       background: $ngx-datatable-row-detail-background-color;
     }
   }
+
+  .datatable-footer {
+    background-color: $ngx-datatable-foot-background-color !important;
+    .page-count {
+      flex: initial;
+    }
+    .datatable-pager {
+      flex: 1;
+    }
+    .datatable-pager li.active a {
+      color: $ngx-datatable-pager-color;
+      background-color: $ngx-datatable-pager-background-color;
+    }
+  }
 }
 
-/* allow selection  */
+// filterable
+.ngx-datatable.material:not(.filterable) {
+  .datatable-header-cell-template-wrap {
+    display: flex;
+    .datatable-header-cell-wrapper {
+      flex: 1;
+    }
+  }
+}
+.ngx-datatable.material.filterable {
+  .datatable-header {
+    .datatable-header-cell {
+      padding: 0 !important;
+    }
+    .datatable-header-cell-template-wrap-custom {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+
+      > .control {
+        height: $ngx-datatable-header-filter-wrapper-height;
+        padding: $block-spacing / 2;
+        background-color: $ngx-datatable-header-filter-wrapper-background-color;
+
+        .input,
+        .select select {
+          height: $ngx-datatable-header-filter-height;
+          border-radius: $ngx-datatable-header-filter-radius;
+          border-color: $ngx-datatable-header-filter-border-color;
+        }
+
+        .icon {
+          height: $ngx-datatable-header-filter-height;
+        }
+      }
+    }
+
+    .datatable-header-cell-template-wrap-custom-head {
+      display: flex;
+      flex: auto;
+      padding: 0.5em 1em !important;
+      .datatable-header-cell-wrapper {
+        flex: 1;
+      }
+    }
+  }
+}
+
+// allow selection
 .ngx-datatable .datatable-body-cell, 
 .ngx-datatable .datatable-header-cell {
-  -webkit-user-select: initial!important;
-  -moz-user-select: initial!important;
-  -ms-user-select: initial!important;
-  -o-user-select: initial!important;
-  user-select:initial!important; 
+  -webkit-user-select: initial !important;
+  -moz-user-select: initial !important;
+  -ms-user-select: initial !important;
+  -o-user-select: initial !important;
+  user-select:initial !important; 
+}
+
+// row/cell selection
+.ngx-datatable.material.selectable:not(.cell-selection) .datatable-body-row.active, 
+.ngx-datatable.material.selectable:not(.cell-selection) .datatable-body-row.active:hover, 
+.ngx-datatable.material.selectable:not(.cell-selection) .datatable-body-row.active .datatable-row-group, 
+.ngx-datatable.material.selectable:not(.cell-selection) .datatable-body-row.active:hover .datatable-row-group,
+.ngx-datatable.material.cell-selection .datatable-body-cell.active,
+.ngx-datatable.material.cell-selection .datatable-body-cell.active:hover,
+.ngx-datatable.material.cell-selection .datatable-body-cell.active:focus,
+.ngx-datatable.material.cell-selection .datatable-body-cell.active .datatable-row-group,
+.ngx-datatable.material.cell-selection .datatable-body-cell.active:hover .datatable-row-group,
+.ngx-datatable.material.cell-selection .datatable-body-cell.active:focus .datatable-row-group {
+  background-color: $ngx-datatable-selection-background-color;
+  .datatable-body-cell-label, .ic {
+    color: $ngx-datatable-selection-color;
+  }
 }
