improve ngx-datatable style, add pickr style

--- a/app/src/lib/_all.scss
+++ b/app/src/lib/_all.scss
@@ -1,10 +1,10 @@
 @charset "utf-8";
 
 @import "angular2-dropdown-multiselect";
-@import "colorpicker";
 @import "ng2-completer";
 @import "ngx-bootstrap";
 @import "ngx-chips";
 @import "ngx-datatable";
+@import "pickr";
 
 @import "busy";
