fix file-input, field.is-horizontal, datatable-header-cell-label

--- a/app/src/bulma-fix.scss
+++ b/app/src/bulma-fix.scss
@@ -11,6 +11,8 @@
 // Fix: 1:5 width of label:input in horizontal form is too bad
 // define its width in case by case should be better
 .field.is-horizontal {
+  align-items: center; // align center horizontal
+
   .field-label {
     flex-grow: 0;
     flex-basis: 100px; // default 100px, define this value in case by case
@@ -57,12 +59,6 @@
 // Fix IE 11: tile
 .is-vertical > .tile {
   -ms-flex-preferred-size: auto; 
-}
-
-// Fix: seeing file input at corner when file button has radius
-.file-input {
-  left: $radius-large;
-  top: $radius-large;
 }
 
 // Fix IE, Edge
