add tippy style

--- a/app/src/sample-variables-config.scss
+++ b/app/src/sample-variables-config.scss
@@ -502,4 +502,13 @@ $ngx-datatable-header-filter-radius: 0;
 // $ngx-datatable-selection-background-color: $grey;
 // $ngx-datatable-selection-color: $text-invert;
 
+// $tooltip-font-size: $size-normal;
+// $tooltip-font-weight: $weight-normal;
+// $tooltip-color: $scheme-main;
+// $tooltip-background-color: $scheme-invert;
+// $tooltip-border-color: rgba(0, 8, 16, 0.15);
+// $tooltip-box-shadow: 0 4px 14px -2px rgba(0, 8 , 16, .08);
+// $tooltip-border-radius: 4px;
+// $tooltip-arrow-size: 16px;
+
 // --
